--- a/Js/index.html
+++ b/Js/index.html
@@ -4,24 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playground</title>
+    <title>Random Quote Machine</title>
     <link rel="stylesheet" href="app/scss/style.css">
     <script src="https://kit.fontawesome.com/901784ae91.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="quote-box">
-            <div id="text" class="fadeOut"></div>
-            <div id="author" class="fadeOut"></div>
-            <div class="buttons">
-                <a id="tweet-quote">
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-                <button id="new-quote">New Quote</button>
-            </div>
+    <div id="quote-box">
+        <div id="text" class="fadeOut"></div>
+        <div id="author" class="fadeOut"></div>
+        <div class="buttons">
+            <a id="tweet-quote">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <div id="by" class="text">Peter Kwok</div>
 
     <script src="app/js/script.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
